# spectral

./: .gitignore  CMakeLists.txt
include/: lazycsv.hpp  stb_image.h  stb_image_write.h
references/: cmf_xyz.csv  cmf_xyz_1nm.csv  cmf_xyz_5nm.csv  references.txt
src/: image.cpp  image.hpp  main.cpp  random.hpp  util.hpp
src/materials/: dielectric_material.cpp  dielectric_material.hpp  diffuse_material.cpp  diffuse_material.hpp  material.cpp  material.hpp  metal_material.cpp  metal_material.hpp  reflective_material.cpp  reflective_material.hpp
src/objects/: bounding_box.hpp  bvh.cpp  bvh.hpp  hit_record.hpp  hittable.hpp  hittable_list.cpp  hittable_list.hpp  obj_model.hpp  sdf.cpp  sdf.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
src/scene/: camera.cpp  camera.hpp  scene.cpp  scene.hpp
src/textures/: texture.cpp  texture.hpp
src/util/: cmf.cpp  cmf.hpp  image.hpp  ior_function.hpp  output_image.hpp  piecewise_linear.hpp  random.hpp  ray.hpp  spectral_conversion.cpp  spectral_conversion.hpp  stb.cpp  stb.hpp  timer.hpp  util.hpp
